fixed popup on mobile (temp fix)

--- a/styles/AtomicPopupButton.module.css
+++ b/styles/AtomicPopupButton.module.css
@@ -33,3 +33,10 @@
   align-items: center;
   width: fit-content;
 }
+
+@media only screen and (max-width: 600px) {
+  .popup {
+    right: 0;
+    margin-right: 10px;
+  }
+}
